Fix: deleted the variants, implemented the media queries and reorganized the code for better readability

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -116,10 +116,14 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
